// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RollerSelector component renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root RollerSelector-root-1"
    tabindex="0"
    type="button"
  >
    Lorem ipsum sit dolor
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root RollerSelector-icon-3"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`RollerSelector component renders selected 1`] = `
<div>
  <button
    class="MuiButtonBase-root RollerSelector-root-4 RollerSelector-selected-5"
    tabindex="0"
    type="button"
  >
    Lorem ipsum sit dolor
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root RollerSelector-icon-6"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`RollerSelector component renders with custom className 1`] = `
<div>
  <button
    class="MuiButtonBase-root testing RollerSelector-root-7"
    tabindex="0"
    type="button"
  >
    Lorem ipsum sit dolor
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root RollerSelector-icon-9"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
      />
    </svg>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`RollerSelector component triggers an onClick event 1`] = `Array []`;
